tests/snapshots/openqasm_tests__exports_bell_circuit.snap
---
source: tests/openqasm_tests.rs
expression: qasm
---
OPENQASM 2.0;
include "qelib1.inc";

qreg q[2];

h q[0];
cx q[0], q[1];
