tests/snapshots/openqasm_tests__exports_single_qubit_gates.snap
---
source: tests/openqasm_tests.rs
expression: qasm
---
OPENQASM 2.0;
include "qelib1.inc";

qreg q[1];

h q[0];
x q[0];
y q[0];
z q[0];
s q[0];
t q[0];
id q[0];
