tests/snapshots/openqasm_tests__snapshot_explicit_measurement_mapping.snap
---
source: tests/openqasm_tests.rs
expression: qasm
---
OPENQASM 2.0;
include "qelib1.inc";

qreg q[2];
creg c[3];

h q[0];
measure q[0] -> c[2];
