tests/snapshots/openqasm_tests__snapshot_measured_bell_circuit.snap
---
source: tests/openqasm_tests.rs
expression: qasm
---
OPENQASM 2.0;
include "qelib1.inc";

qreg q[2];
creg c[2];

h q[0];
cx q[0], q[1];
measure q[0] -> c[0];
measure q[1] -> c[1];
