tests/snapshots/openqasm_tests__snapshot_openqasm3_bell_circuit.snap
---
source: tests/openqasm_tests.rs
expression: qasm
---
OPENQASM 3.0;
include "stdgates.inc";

qubit[2] q;

h q[0];
cx q[0], q[1];
