tests/snapshots/openqasm_tests__snapshot_openqasm3_measured_bell_circuit.snap
---
source: tests/openqasm_tests.rs
expression: qasm
---
OPENQASM 3.0;
include "stdgates.inc";

qubit[2] q;
bit[2] c;

h q[0];
cx q[0], q[1];
c[0] = measure q[0];
c[1] = measure q[1];
